--- a/public/3d-molecular/index.html
+++ b/public/3d-molecular/index.html
@@ -327,7 +327,7 @@
 
         <div class="info-panel" id="info-panel">
             <h3 id="molecule-name">H₂O (水)</h3>
-            <p id="molecule-description">水分子は酸素原子1個と水素原子2個から構成されています。分子の形状は曲がった（屈曲）形をしており、結合角は約104.5°です。【極性分子】酸素の電気陰性度が高いため、O-H結合が極性を持ち、分子全体として双極子モーメントを持ちます。</p>
+            <p id="molecule-description">水分子は酸素原子1個と水素原子2個から構成されています。分子の形状は曲がった（屈曲）形をしており、結合角は約104.5°です。【極性分子】酸素の電気陰性度が高いため、O-H結合が極性を持ち、分子全体として極性を持ちます。</p>
         </div>
 
         <div class="instructions">
@@ -345,7 +345,7 @@
         const molecules = {
             H2O: {
                 name: "H₂O (水)",
-                description: "水分子は酸素原子1個と水素原子2個から構成されています。分子の形状は曲がった（屈曲）形をしており、結合角は約104.5°です。【極性分子】酸素の電気陰性度が高いため、O-H結合が極性を持ち、分子全体として双極子モーメントを持ちます。",
+                description: "水分子は酸素原子1個と水素原子2個から構成されています。分子の形状は曲がった（屈曲）形をしており、結合角は約104.5°です。【極性分子】酸素の電気陰性度が高いため、O-H結合が極性を持ち、分子全体として極性を持ちます。",
                 atoms: [
                     { element: 'O', position: [0, 0, 0], color: 0xff4444, radius: 0.5 },
                     { element: 'H', position: [0.96, 0.25, 0], color: 0xffffff, radius: 0.3 },
@@ -358,7 +358,7 @@
             },
             CO2: {
                 name: "CO₂ (二酸化炭素)",
-                description: "二酸化炭素分子は炭素原子1個と酸素原子2個から構成されています。直線型の分子で、炭素原子が中心に位置し、両側に酸素原子が配置されています。C=O二重結合を持ちます。【無極性分子】C=O結合は極性ですが、直線型構造により双極子モーメントが打ち消し合います。",
+                description: "二酸化炭素分子は炭素原子1個と酸素原子2個から構成されています。直線型の分子で、炭素原子が中心に位置し、両側に酸素原子が配置されています。C=O二重結合を持ちます。【無極性分子】C=O結合は極性ですが、直線型構造により極性が打ち消し合います。",
                 atoms: [
                     { element: 'C', position: [0, 0, 0], color: 0x444444, radius: 0.5 },
                     { element: 'O', position: [1.2, 0, 0], color: 0xff4444, radius: 0.5 },
@@ -403,7 +403,7 @@
             },
             HCN: {
                 name: "HCN (シアン化水素)",
-                description: "シアン化水素は直線型分子で、炭素と窒素の間に三重結合があります。極めて毒性が強い分子です。【極性分子】C≡N結合とC-H結合の極性により、分子全体として双極子モーメントを持ちます。",
+                description: "シアン化水素は直線型分子で、炭素と窒素の間に三重結合があります。極めて毒性が強い分子です。【極性分子】C≡N結合とC-H結合の極性により、分子全体として極性を持ちます。",
                 atoms: [
                     { element: 'H', position: [-1.7, 0, 0], color: 0xffffff, radius: 0.3 },
                     { element: 'C', position: [-0.5, 0, 0], color: 0x444444, radius: 0.5 },
@@ -461,7 +461,7 @@
             },
             HF: {
                 name: "HF (フッ化水素)",
-                description: "フッ化水素は最も単純な二原子分子の一つです。フッ素は電気陰性度が最も高い元素です。【極性分子】H-F結合は非常に大きな極性を持ち、強い双極子モーメントを示します。",
+                description: "フッ化水素は最も単純な二原子分子の一つです。フッ素は電気陰性度が最も高い元素です。【極性分子】H-F結合は非常に大きな極性を持ち、強い極性を示します。",
                 atoms: [
                     { element: 'H', position: [-0.6, 0, 0], color: 0xffffff, radius: 0.3 },
                     { element: 'F', position: [0.6, 0, 0], color: 0x90ee90, radius: 0.5 }
@@ -605,7 +605,7 @@
             },
             CH2O: {
                 name: "CH₂O (ホルムアルデヒド)",
-                description: "ホルムアルデヒドは平面三角形構造を持つアルデヒドです。C=O二重結合を持ちます。【極性分子】C=O結合の強い極性により、分子全体として大きな双極子モーメントを持ちます。",
+                description: "ホルムアルデヒドは平面三角形構造を持つアルデヒドです。C=O二重結合を持ちます。【極性分子】C=O結合の強い極性により、分子全体として大きな極性を持ちます。",
                 atoms: [
                     { element: 'C', position: [0, 0, 0], color: 0x444444, radius: 0.5 },
                     { element: 'O', position: [0, 1.2, 0], color: 0xff4444, radius: 0.5 },
