--- a/public/3d-molecular/index.html
+++ b/public/3d-molecular/index.html
@@ -241,12 +241,6 @@
                 <button class="molecule-btn" onclick="showMolecule('CH4', this)">CH₄</button>
                 <button class="molecule-btn" onclick="showMolecule('HCN', this)">HCN</button>
                 <button class="molecule-btn" onclick="showMolecule('H2S', this)">H₂S</button>
-            </div>
-        </div>
-
-        <div class="molecule-section">
-            <h3>単純分子</h3>
-            <div class="molecule-grid">
                 <button class="molecule-btn" onclick="showMolecule('BH3', this)">BH₃</button>
                 <button class="molecule-btn" onclick="showMolecule('SiH4', this)">SiH₄</button>
                 <button class="molecule-btn" onclick="showMolecule('HF', this)">HF</button>
@@ -266,7 +260,7 @@
         </div>
 
         <div class="molecule-section">
-            <h3>有機分子</h3>
+            <h3>有機化合物</h3>
             <div class="molecule-grid">
                 <button class="molecule-btn" onclick="showMolecule('C2H6', this)">C₂H₆</button>
                 <button class="molecule-btn" onclick="showMolecule('C2H4', this)">C₂H₄</button>
